--- a/conteiners.html
+++ b/conteiners.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
 <body>
+
     <header>
         <h1>Conteiners</h1>
         <nav>
-            <h3><a href="./index.html" title="Ir para index">Home</a></h3>
+            <h3><a href="./index.html" title="Ir para index">Index</a></h3>
+            <h3><a href="./Listas.html" title="Ir para listas">Listas</a></h3>
         </nav>
     </header>
+
     <main>
         <div>
 
@@ -21,10 +24,16 @@
                     <h3>Brasil vs Argentina</h3>
                     <h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum omnis dolorem soluta blanditiis adipisci fuga similique aperiam, error a culpa quaerat vitae, itaque ut esse molestiae, sint voluptates aliquam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum 
+                            harum omnis dolorem soluta blanditiis adipisci fuga similique 
+                            aperiam, error a culpa quaerat vitae, itaque ut esse molestiae, 
+                            sint voluptates aliquam.
                         </p>
                         <p>
-                            Lorem ipsum, dolor sit amet <del>consectetur</del> adipisicing elit. Voluptate repudiandae corrupti beatae ullam ipsum soluta fugit suscipit ex debitis, voluptatibus, dicta sequi quis tempora quaerat voluptas accusantium laborum sit in?
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. V
+                            oluptate repudiandae corrupti beatae ullam ipsum soluta fugit 
+                            suscipit ex debitis, voluptatibus, dicta sequi quis tempora 
+                            quaerat voluptas accusantium laborum sit in?
                         </p>
                     </h4>
                 </article>
@@ -35,7 +44,10 @@
                 <article>
                     <h3>Queda no dolar</h3>
                     <h4>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis fugiat dolor, fugit commodi quo ipsam voluptas, quam ducimus, molestias repellat voluptatum laborum quos mollitia? Doloremque quis beatae fugit sed molestias.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis 
+                        fugiat dolor, fugit commodi quo ipsam voluptas, quam ducimus, 
+                        molestias repellat voluptatum laborum quos mollitia? Doloremque quis 
+                        beatae fugit sed molestias.
                     </h4>
                 </article>
             </section>
@@ -45,7 +57,10 @@
                 <article>
                     <h3>Aumento no desemprego</h3>
                     <h4>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit dolore facere eaque tempora magnam, laborum quia placeat voluptatibus voluptatum rerum aliquam fuga accusantium consequatur autem eveniet fugiat, cupiditate nihil cum.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit dolore
+                        facere eaque tempora magnam, laborum quia placeat voluptatibus 
+                        voluptatum rerum aliquam fuga accusantium consequatur autem eveniet 
+                        fugiat, cupiditate nihil cum.
                     </h4>
                 </article>
             </section>
