--- a/Listas.html
+++ b/Listas.html
@@ -9,12 +9,16 @@
     <div>
         <header>
             <h1>Listas</h1>
+            <nav>
+                <h3><a href="./index.html" title="Ir para o site index">Index</a></h3>
+                <h3><a href="./conteiners.html" title="Ir para o site conteiners">Conteiners</a></h3>
+            </nav>
         </header>
 
         <main>
             <section>
                 <h2>Listas Ordenadas</h2>
-                <p>Utilizamos a tag (ol) para criar uma lista ordenada</p>
+
                 <ol>
                     <li>primeiro item</li>
                     <li>segundo item</li>
@@ -24,6 +28,7 @@
 
             <section>
                 <h2>Listas Não Ordenadas</h2>
+
                 <ul>
                     <li>primeiro item</li>
                     <li>segundo item</li>
