Docs: Atualizando aula 3.5 ebac

--- a/tabelas.html
+++ b/tabelas.html
@@ -26,6 +26,7 @@
                     
                 </tr>
             </thead>
+
             <tbody>
                 <tr>
                     <th>1° prova</th>
@@ -38,6 +39,7 @@
                     <th>6</th>
                 </tr>
             </tbody>
+
             <tfoot>
                 <tr>
                     <th>Media</th>
@@ -46,9 +48,72 @@
                 </tr>
             </tfoot>
         </table>
+        <hr ./>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>idproduto</th>
+                    <th>pruduto</th>
+                    <th>Qtde</th>
+                    <th>valor unit</th>
+                    <th>valor total</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <th>produto 1</th>
+                    <th>5</th>
+                    <th>3,00</th>
+                    <th>15,00</th>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <th>produto 2</th>
+                    <th>10</th>
+                    <th>2,00</th>
+                    <th>20,00</th>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <th>produto 3</th>
+                    <th>20</th>
+                    <th>1,50</th>
+                    <th>30,00</th>
+                </tr>
+                <tr>
+                    <th>4</th>
+                    <th>produto 4</th>
+                    <th>10</th>
+                    <th>3,00</th>
+                    <th>30,00</th>
+                </tr>
+                <tr>
+                    <th>5</th>
+                    <th>produto 5</th>
+                    <th>5</th>
+                    <th>3,50</th>
+                    <th>17,50</th>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <th>Total</th>
+                    <th>5</th>
+                    <th>50</th>
+                    <th>13,00</th>
+                    <th>112,50</th>
+                </tr>
+            </tfoot>
+        </table>
     </main>
 
     <footer>
+        <br ./>
+        <br ./>
         &copy; 2023/08/15.
     </footer>
 </body>
