Docs: aula 3.6 ebac:

--- a/tabelas.html
+++ b/tabelas.html
@@ -12,6 +12,7 @@
             <h3><a href="./index.html" title="ir para o site index">Index</a></h3>
             <h3><a href="./conteiners.html" title="ir para o site conteiners">Conteiners</a></h3>
             <h3><a href="./Listas.html" title="ir para o site listas">Listas</a></h3>
+            <h3><a href="./formulario.html" title="ir para o site formulario">Formulario</a></h3>
         </nav>
     </header>
 
