Docs:Integrando aula 3.7

--- a/Listas.html
+++ b/Listas.html
@@ -14,6 +14,7 @@
                 <h3><a href="./conteiners.html" title="Ir para o site conteiners">Conteiners</a></h3>
                 <h3><a href="./tabelas.html" title="Ir para o site Tabelas">Tabelas</a></h3>
                 <h3><a href="./formulario.html" title="ir para o site formulario">Formulario</a></h3>
+                <h3><a href="./midia.html" title="Ir para midia">Midia</a></h3>
             </nav>
         </header>
 
