--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,8 @@
             <h3><a href="./index.html" title="ir para o site index">Index</a></h3>
             <h3><a href="./conteiners.html" title="ir para o site conteiners">Conteiners</a></h3>
             <h3><a href="./Listas.html" title="ir para o site listas">Listas</a></h3>
-            <h3><a href="./tabelas.html" title="ir para o site formulario">Tabelas</a></h3>
+            <h3><a href="./tabelas.html" title="ir para o site tabelas">Tabelas</a></h3>
+            <h3><a href="./midia.html" title="Ir para midia">Midia</a></h3>
         </nav>
     </header>
 
@@ -35,14 +36,14 @@
             <input type="color"><br>
 
             <input type="checkbox" id="checkbox-termos"><label for="checkbox-termos">Aceito os termos</label><br>
-
+            
             <p>
                 Qual sua cor favorita ?
             </p>
             <input type="radio" name="cor-favorita" id="cor-vermelha" ><label for="cor-vermelha">vermelho</label>
             <input type="radio" name="cor-favorita" id="cor-vere" ><label for="cor-verde">Verde</label>
             <input type="radio" name="cor-favorita" id="cor-azul" ><label for="cor-azul">Azul</label><br>
-
+            
             <label>Qual seu filme favorito?</label>
             <select>
                 <option>filme a</option>
