--- a/tabelas.html
+++ b/tabelas.html
@@ -13,6 +13,7 @@
             <h3><a href="./conteiners.html" title="ir para o site conteiners">Conteiners</a></h3>
             <h3><a href="./Listas.html" title="ir para o site listas">Listas</a></h3>
             <h3><a href="./formulario.html" title="ir para o site formulario">Formulario</a></h3>
+            <h3><a href="./midia.html" title="Ir para midia">Midia</a></h3>
         </nav>
     </header>
 
